# tita_bringup

./: CMakeLists.txt  README.md  package.xml
config/: param.yaml
include/sophus/: average.hpp  common.hpp  example_ensure_handler.cpp  formatstring.hpp  geometry.hpp  interpolate.hpp  interpolate_details.hpp  num_diff.hpp  rotation_matrix.hpp  rxso2.hpp  rxso3.hpp  se2.hpp  se3.hpp  sim2.hpp  sim3.hpp  sim_details.hpp  so2.hpp  so3.hpp  test_macros.hpp  types.hpp  velocities.hpp
include/tita_utils/: tita_cv.hpp  tita_pcl.hpp  tita_utils.hpp  topic_names.hpp
launch/: command_launch.py  interaction_launch.py  launch_utils.py  location_launch.py  perception_launch.py  system_launch.py  tita_basic.launch.py
script/: format_all_c_files.bash  run_check.bash
src/: tita_cv.cpp  tita_pcl.cpp  tita_utils.cpp
